Responsive fixes and horizontal scroll

--- a/css/main.scss
+++ b/css/main.scss
@@ -147,6 +147,10 @@ button {
             color: $blue;
         }
     }
+
+    .hidden-block {
+        display: none;
+    }
 }
 
 .active {
@@ -158,11 +162,17 @@ button {
     visibility: hidden;
 }
 
+
+
 .customer-name-span {
     text-transform: capitalize;
 }
 
 #carousel {
+    .scroll-instruction {
+        @include general-text($main-color, none);
+        visibility: hidden;
+    }
 
     ul {
         display: flex;
@@ -176,6 +186,7 @@ button {
             padding: $small;
             text-align: center;
             border: 1px solid transparent;
+            align-items: center;
 
 
             &:hover {
@@ -184,7 +195,7 @@ button {
             }
 
             img {
-                width: 128px;
+                width: 96px;
                 pointer-events: none; //AVOID E.TARGET RETURNING THIS ELEMENT
             }
 
@@ -193,6 +204,8 @@ button {
                 pointer-events: none; // THIS IS TO AVOID E.TARGET RETURNING THIS ELEMENT
             }
         }
+
+
 
         .selected {
             background-color: $blue;
@@ -230,4 +243,29 @@ button {
         flex-wrap: wrap;
         padding: $small;
     }
+
+    #carousel {
+        width: 100%;
+
+        .scroll-instruction {
+            visibility: visible;
+        }
+
+        ul {
+            overflow-x: scroll;
+            overflow-y: hidden;
+            white-space: nowrap;
+            -webkit-overflow-scrolling: touch;
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
+
+            li {
+                display: inline-block;
+                margin: 0;
+            }
+        }
+    }
+
 }
